--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 			<input type="search" placeholder="Search...">
 		</form>
 	</div>
+	<div><img src="https://pic.rutubelist.ru/video/50/22/50228e358e13ac2fab4a911301d9d8cc.jpg"></div>
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/main.js"></script>
